# OpenGL_startup_project

./: .gitmodules  CMakeLists.txt  README.md
OpenGL_startup_project/: OpenGL_startup_project.vcxproj  seden.h
OpenGL_startup_project/source/: glad.c  main.cpp
OpenGL_startup_project/source/camera/: camera.cpp  camera.h
OpenGL_startup_project/source/opengl/: Shader.cpp  Shader.h
OpenGL_startup_project/source/window/: window.cpp  window.h
